Pseudo and non pseudo elements should return correct computed content value

This patch makes sure that content computes to "normal" for elements
(not pseudo elements) and to "none" if the specified value of pseudo
elements ::before and ::after is "normal."

This patch makes us interoperable with all other browsers for the
case of pseudo elements :before and ::after where the specified value
is "normal".

With regards to non psuedo elements we are now interoperable with IE
and the spec and return "normal" for the computed content all all non
psuedo elements.
Other browsers are inconcistent on this behaviour:
1. Edge returns an empty string for non pseudo elements
2. FF returns none for non pseudo elements.

The spec implemented is given here:
https://drafts.csswg.org/css2/generate.html#content

BUG=597500

Review URL: https://codereview.chromium.org/1812763002

Cr-Commit-Position: refs/heads/master@{#383949}

Former-commit-id: aaeefae6c3a945e7fcfef382c3a82002ffae0e19